--- a/episodes.html
+++ b/episodes.html
@@ -1,89 +1,233 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Website for a university project" name="description">
-  <meta content="Slytaria" name="author">
-  <title>Gochuumon wa Usagi Desu ka?</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Website for a university project" name="description">
+    <meta content="Slytaria" name="author">
+    <title>Gochuumon wa Usagi Desu ka?</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <div class="spinner-wrapper">
-    <div class="spinner">
-      <div class="sk-folding-cube">
-        <div class="sk-cube1 sk-cube"></div>
-        <div class="sk-cube2 sk-cube"></div>
-        <div class="sk-cube4 sk-cube"></div>
-        <div class="sk-cube3 sk-cube"></div>
-      </div>
-      <p>Chargement en cours...</p>
-    </div>
-  </div>
-  <header>
-    <nav class="navbar navbar-default navbar-fixed-top affix-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> 
-           <span class="icon-bar"></span> <span class="icon-bar"></span>
-          <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+    <div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="sk-folding-cube">
+                <div class="sk-cube1 sk-cube"></div>
+                <div class="sk-cube2 sk-cube"></div>
+                <div class="sk-cube4 sk-cube"></div>
+                <div class="sk-cube3 sk-cube"></div>
+            </div>
+            <p>Chargement en cours...</p>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="histoire.html">histoire</a>
-            </li>
-            <li>
-              <a href="staff.html">staff</a>
-            </li>
-            <li>
-              <a href="characters.html">personnages</a>
-            </li>
-            <li>
-              <a href="episodes.html">épisodes</a>
-            </li>
-            <li>
-              <a href="music.html">musique</a>
-            </li>
-            <li>
-              <a href="galerie.html">galerie</a>
-            </li>
-            <li>
-              <a href="#">crédits</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <div class="containerbody">
-    <div class="row">
-      <div class="pull-md-3 bd-content">
-      <h1>Episodes</h1><hr>
-          
-      </div>
     </div>
-  </div>
-  <footer>
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
-            <div class="pull-right">
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top affix-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span> <span class="icon-bar"></span>
+                        <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="histoire.html">histoire</a>
+                        </li>
+                        <li>
+                            <a href="staff.html">staff</a>
+                        </li>
+                        <li>
+                            <a href="characters.html">personnages</a>
+                        </li>
+                        <li>
+                            <a href="episodes.html">épisodes</a>
+                        </li>
+                        <li>
+                            <a href="music.html">musique</a>
+                        </li>
+                        <li>
+                            <a href="galerie.html">galerie</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="containerbody">
+        <div class="row">
+            <div class="pull-md-3 bd-content">
+                <h1>Episodes</h1>
+                <hr>
+                <h2>Saison 1</h2>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Nom</th>
+                            <th>Nom orignal</th>
+                            <th>Date de diffusion</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>I Knew at First Glance That It Was No Ordinary Fluffball</td>
+                            <td>Hitome de Jinjou de Nai Mofumofu Da to Minuita yo (ひと目で尋常でないもふもふだと見抜いたよ)</td>
+                            <td>Apr 10, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>The Girl Who Loved Wheat and the Girl Loved by Azuki Beans.</td>
+                            <td>Komugi wo Aishita Shoujo to Azuki ni Aisareta Shoujo (小麦を愛した少女と小豆に愛された少女)</td>
+                            <td>Apr 17, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Do You Remember the Day You First Got Drunk? You Tried to Light a Campfire in Your Own Home, Didn't You?</td>
+                            <td>Hajimete Yotta Hi no Koto Oboeteru? Jibun no Ie de Campfire Shiyou to Shita wa yo ne (初めて酔った日の事憶えてる？自分の家でキャンプファイヤーしようとしたわよね)</td>
+                            <td>Apr 24, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Your Lucky Items Are Vegetables, Crime, and Punishment.</td>
+                            <td>Lucky Item wa Yasai to Tsumi to Batsu (ラッキーアイテムは野菜と罪と罰)</td>
+                            <td>May 1, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Cocoa and Murderous Intent Without Malice</td>
+                            <td>Cocoa to Akuinaki Satsui (ココアと悪意なき殺意)</td>
+                            <td>May 8, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>A Story About Telling a Story</td>
+                            <td>Ohanashi wo Suru Ohanashi (お話をするお話)</td>
+                            <td>May 15, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Call Me Sister</td>
+                            <td>Call Me Sister. (Call Me Sister.)</td>
+                            <td>May 22, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Wet with Pool Water, Wet with Rain, Wet with Tears</td>
+                            <td>Pool ni Nurete Ame ni Nurete Namida ni Nurete (プールに濡れて 雨に濡れて涙に濡れて)</td>
+                            <td>May 29, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>Aoyama Slump Mountain</td>
+                            <td>Aoyama Slump Mountain (青山スランプマウンテン)</td>
+                            <td>Jun 5, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>The Anti-Sister Battle Corps, Also Known As the Chimame Corps</td>
+                            <td>Tai Onee-chan You Kessen Butai, Tsuushou Chimame-tai (対お姉ちゃん用決戦部隊、通称チマメ隊)</td>
+                            <td>Jun 12, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>The Girl Dons a Red Coat and Drives a Team of Rabbits Across the Christmas Eve Night Sky</td>
+                            <td>Shoujo wa Akai Gaitou wo Matoi Usagi wo Karite Seiya no Sora wo Iku (少女は赤い外套を纏いウサギを駆りて聖夜の空を行く)</td>
+                            <td>Jun 19, 2014</td>
+                        </tr>
+                        <tr>
+                            <td>For You, I Can Sleep Late</td>
+                            <td>Kimi no Tame Nara Nebousuru (君のためなら寝坊する)</td>
+                            <td>Jun 26, 2014</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2>Saison 2</h2>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Nom</th>
+                            <th>Nom orignal</th>
+                            <th>Date de diffusion</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Her Smile and Flash Are Annoying / That's My So-Called Older Sister</td>
+                            <td>Egao to Flash ga Yakamashii / Kore ga Watashi no Jishou Ane desu (笑顔とフラッシュがやかましい／これが私の自称姉です)</td>
+                            <td>Oct 10, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>The Ash-Colored Rabbit and the Ash Princess</td>
+                            <td>Haiiro Usagi to Hai-kaburi Hime (灰色兔と灰かぶり姫) </td>
+                            <td>Oct 17, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>The Legendary Twirl Dancing Duck Squad</td>
+                            <td>Kaiten Butou Densetsu Ahiru-tai (回転舞踏伝説アヒル隊)</td>
+                            <td>Oct 24, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>Kokoa-senpai's Elegant Tea Party Tutorial</td>
+                            <td>Kokoa-senpai no Yuuga na Ochakai Tutorial (ココア先輩の優雅なお茶会チュートリアル)</td>
+                            <td>Oct 31, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>I Could Tell with One Bite That It's Just a Normal Chewy</td>
+                            <td>Hitokuchi de Futsuu no Mochimochi da to Minuita yo (ひと口で普通のもちもちだと見抜いたよ)</td>
+                            <td>Nov 7, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>Wood-Framed Town Mission Complete</td>
+                            <td>Kigumi no Machi Mission Complete (木組みの街攻略完了（みっしょんこんぷりーと）)</td>
+                            <td>Nov 14, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>That Babyish Little Child Vanishes Like a Soap Bubble</td>
+                            <td>Amaenbou na Ano Ko wa Shabondama no You ni Hakanaku Kieru (甘えん坊なあの子はシャボン玉のように儚く消える)</td>
+                            <td>Nov 21, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>Sneaking Stalking Stalker Story</td>
+                            <td>Sneaking Stalking Stalker Story (スニーキングストーキングストーカーストーリー)</td>
+                            <td>Nov 28, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>The Furball Launches a Suicide Attack and a Cruel Button is Fired</td>
+                            <td>Kedama wa Tokkoushi Mujihi na Button wa Hanatareru (毛玉は特攻し無慈悲なボタンは放たれる)</td>
+                            <td>Dec 5, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>A Day in Search of E</td>
+                            <td>E wo Sagasu Nichijou (Eを探す日常)</td>
+                            <td>Dec 12, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>Stardust Mayim Mayim</td>
+                            <td>Stardust Mayim Mayim (スターダスト・マイムマイム)</td>
+                            <td>Dec 19, 2015</td>
+                        </tr>
+                        <tr>
+                            <td>The Treasure is Your Decisive Moment</td>
+                            <td>Takaramono wa Kimi no Ketteiteki Shunkan (宝物は君の決定的瞬間) </td>
+                            <td>Dec 26, 2015</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-  </footer>
-  <script src="js/cheet.min.js" type="text/javascript"></script> 
-  <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="js/tether.min.js"></script>
-  <script src="js/bootstrap.min.js"></script> 
-  <script>
-    window.addEventListener("load", function(){
-      var load_screen = document.getElementById("spinner-wrapper");
-      $( ".spinner-wrapper" ).remove();
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
+                <div class="pull-right">
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="js/cheet.min.js" type="text/javascript"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/tether.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+    window.addEventListener("load", function() {
+        var load_screen = document.getElementById("spinner-wrapper");
+        $(".spinner-wrapper").remove();
     });
-  </script>
+    </script>
 </body>
+
 </html>
