--- a/characters.html
+++ b/characters.html
@@ -1,101 +1,251 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Website for a university project" name="description">
-  <meta content="Slytaria" name="author">
-  <title>Gochuumon wa Usagi Desu ka?</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Website for a university project" name="description">
+    <meta content="Slytaria" name="author">
+    <title>Gochuumon wa Usagi Desu ka?</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <div class="spinner-wrapper">
-    <div class="spinner">
-      <div class="sk-folding-cube">
-        <div class="sk-cube1 sk-cube"></div>
-        <div class="sk-cube2 sk-cube"></div>
-        <div class="sk-cube4 sk-cube"></div>
-        <div class="sk-cube3 sk-cube"></div>
-      </div>
-      <p>Chargement en cours...</p>
-    </div>
-  </div>
-  <header>
-    <nav class="navbar navbar-default navbar-fixed-top affix-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> 
-           <span class="icon-bar"></span> <span class="icon-bar"></span>
-          <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+    <div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="sk-folding-cube">
+                <div class="sk-cube1 sk-cube"></div>
+                <div class="sk-cube2 sk-cube"></div>
+                <div class="sk-cube4 sk-cube"></div>
+                <div class="sk-cube3 sk-cube"></div>
+            </div>
+            <p>Chargement en cours...</p>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="histoire.html">histoire</a>
-            </li>
-            <li>
-              <a href="staff.html">staff</a>
-            </li>
-            <li>
-              <a href="characters.html">personnages</a>
-            </li>
-            <li>
-              <a href="episodes.html">épisodes</a>
-            </li>
-            <li>
-              <a href="music.html">musique</a>
-            </li>
-            <li>
-              <a href="galerie.html">galerie</a>
-            </li>
-            <li>
-              <a href="#">crédits</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <div class="containerbody">
-    <div class="row">
-      <div class="pull-md-3 bd-content">
-          <h1>Personnages</h1><hr>
-          <ul class="image">
-          <!-- trigger js -->
-            <li><a href="#001"><img src="img/avatar-001.jpg" class="img-rounded"></a></li>
-            <li><a href="#002"><img src="img/avatar-002.jpg" class="img-rounded"></a></li>
-            <li><a href="#003"><img src="img/avatar-003.jpg" class="img-rounded"></a></li>
-            <li><a href="#004"><img src="img/avatar-004.jpg" class="img-rounded"></a></li>
-            <li><a href="#005"><img src="img/avatar-005.jpg" class="img-rounded"></a></li>
-            <li><a href="#006"><img src="img/avatar-006.jpg" class="img-rounded"></a></li>
-            <li><a href="#007"><img src="img/avatar-007.jpg" class="img-rounded"></a></li>
-            <li><a href="#008"><img src="img/avatar-008.jpg" class="img-rounded"></a></li>
-            <li><a href="#009"><img src="img/avatar-009.jpg" class="img-rounded"></a></li>
-            <li><a href="#010"><img src="img/avatar-010.jpg" class="img-rounded"></a></li>
-          </ul>
-      </div>
     </div>
-  </div>
-  <footer>
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
-            <div class="pull-right">
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top affix-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span> <span class="icon-bar"></span>
+                        <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="histoire.html">histoire</a>
+                        </li>
+                        <li>
+                            <a href="staff.html">staff</a>
+                        </li>
+                        <li>
+                            <a href="characters.html">personnages</a>
+                        </li>
+                        <li>
+                            <a href="episodes.html">épisodes</a>
+                        </li>
+                        <li>
+                            <a href="music.html">musique</a>
+                        </li>
+                        <li>
+                            <a href="galerie.html">galerie</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="containerbody">
+        <div class="row">
+            <div class="pull-md-3 bd-content">
+                <h1>Personnages</h1>
+                <hr>
+                <ul class="image">
+                    <!-- trigger js -->
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#a"><img src="img/avatar-001.jpg" class="img-rounded avatar"></a>
+                        <div id="a" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="001" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="a">Kokoa "Hot Cocoa" Hoto</h4>
+                                        <img src="img/profile-001.jpg" alt="Kokoa Hoto">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#b"><img src="img/avatar-002.jpg" class="img-rounded avatar"></a>
+                        <div id="b" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="002" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="b">Chino "Cappuccino" Kafuu</h4>
+                                        <img src="img/profile-002.jpg" alt="Chino Kafuu">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#c"><img src="img/avatar-003.jpg" class="img-rounded avatar"></a>
+                        <div id="c" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="003" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="c">Rize "Thé des Alizés" Tedeza</h4>
+                                        <img src="img/profile-003.jpg" alt="Rize Tedeza">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#d"><img src="img/avatar-004.jpg" class="img-rounded avatar"></a>
+                        <div id="d" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="004" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="d">Chiya "Uji Matcha Chiyo Mukashi" Ujimatsu</h4>
+                                        <img src="img/profile-004.jpg" alt="Chiya Ujimatsu">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#e"><img src="img/avatar-005.jpg" class="img-rounded avatar"></a>
+                        <div id="e" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="005" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="e">Sharo "Kilimanjaro" Kirima</h4>
+                                        <img src="img/profile-005.jpg" alt="Sharo Kirima">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#f"><img src="img/avatar-006.jpg" class="img-rounded avatar"></a>
+                        <div id="f" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="006" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="f">Maya "Jogmaya" Jouga</h4>
+                                        <img src="img/profile-006.jpg" alt="Maya Jouga">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#g"><img src="img/avatar-007.jpg" class="img-rounded avatar"></a>
+                        <div id="g" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="007" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="g">Megumi "Nutmeg, Meg" Natsu</h4>
+                                        <img src="img/profile-007.jpg" alt="Megumi Natsu">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#h"><img src="img/avatar-008.jpg" class="img-rounded avatar"></a>
+                        <div id="h" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="008" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="h">Midori "Blue Mountain" Aoyama</h4>
+                                        <img src="img/profile-008.jpg" alt="Midori Aoyama">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#i"><img src="img/avatar-009.jpg" class="img-rounded avatar"></a>
+                        <div id="i" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="009" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="i">Takahiro Kafuu</h4>
+                                        <img src="img/profile-009.jpg" alt="Takahiro Kafuu">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#" class="span4 proj-div" data-toggle="modal" data-target="#j"><img src="img/avatar-010.jpg" class="img-rounded avatar"></a>
+                        <div id="j" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="010" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times; </button>
+                                        <h4 class="modal-title" id="j">Moka "Mocha" Hoto</h4>
+                                        <img src="img/profile-010.jpg" alt="Moka Hoto">
+                                    </div>
+                                    <div class="modal-body">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
             </div>
         </div>
     </div>
-  </footer>
-  <script src="js/cheet.min.js" type="text/javascript"></script> 
-  <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="js/tether.min.js"></script>
-  <script src="js/bootstrap.min.js"></script> 
-  <script>
-    window.addEventListener("load", function(){
-      var load_screen = document.getElementById("spinner-wrapper");
-      $( ".spinner-wrapper" ).remove();
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
+                <div class="pull-right">
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="js/cheet.min.js" type="text/javascript"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/tether.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+    window.addEventListener("load", function() {
+        var load_screen = document.getElementById("spinner-wrapper");
+        $(".spinner-wrapper").remove();
     });
-  </script>
+    </script>
 </body>
+
 </html>
