--- a/staff.html
+++ b/staff.html
@@ -1,106 +1,109 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Website for a university project" name="description">
-  <meta content="Slytaria" name="author">
-  <title>Gochuumon wa Usagi Desu ka?</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Website for a university project" name="description">
+    <meta content="Slytaria" name="author">
+    <title>Gochuumon wa Usagi Desu ka?</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <div class="spinner-wrapper">
-    <div class="spinner">
-      <div class="sk-folding-cube">
-        <div class="sk-cube1 sk-cube"></div>
-        <div class="sk-cube2 sk-cube"></div>
-        <div class="sk-cube4 sk-cube"></div>
-        <div class="sk-cube3 sk-cube"></div>
-      </div>
-      <p>Chargement en cours...</p>
-    </div>
-  </div>
-  <header>
-    <nav class="navbar navbar-default navbar-fixed-top affix-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> 
-           <span class="icon-bar"></span> <span class="icon-bar"></span>
-          <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+    <div class="spinner-wrapper">
+        <div class="spinner">
+            <div class="sk-folding-cube">
+                <div class="sk-cube1 sk-cube"></div>
+                <div class="sk-cube2 sk-cube"></div>
+                <div class="sk-cube4 sk-cube"></div>
+                <div class="sk-cube3 sk-cube"></div>
+            </div>
+            <p>Chargement en cours...</p>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="histoire.html">histoire</a>
-            </li>
-            <li>
-              <a href="staff.html">staff</a>
-            </li>
-            <li>
-              <a href="characters.html">personnages</a>
-            </li>
-            <li>
-              <a href="episodes.html">épisodes</a>
-            </li>
-            <li>
-              <a href="music.html">musique</a>
-            </li>
-            <li>
-              <a href="galerie.html">galerie</a>
-            </li>
-            <li>
-              <a href="#">crédits</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <div class="containerbody">
-    <div class="row">
-      <div class="pull-md-3 bd-content">
-      <h1>Staff</h1><hr>
-          <h3>Voix</h3><hr>
-            <p>Sakura, Ayane en tant que Hoto, Kokoa</p>
-            <p>Minase, Inori en tant que Kafuu, Chino</p>
-            <p>Uchida, Maaya en tant que Kirima, Sharo</p>
-            <p>Taneda, Risa en tant que Tedeza, Rize</p>
-            <p>Sato, Satomi en tant que Ujimatsu, Chiyaz</p>
-            <p>Hayami, Saori en tant que Aoyama, Midori</p>
-            <p>Kayano, Ai en tant que Hoto, Moka</p>
-            <p>Tokui, Sora en tant que Jouga, Maya</p>
-            <p>Hayami, Show en tant que Kafuu, Takahiro</p>
-            <p>Murakawa, Rie en tant que Natsu, Megumi</p>
-            <p>Kiyokawa, Motomu en tant que Tippy</p>
-          <h3>Direction Artistique/Technique</h3><hr>
-            <p>Hashimoto, Hiroyuki en tant que Directeur</p>
-            <p>Aketagawa, Jin  en tant que Directeur Son</p>
-            <p>Hirayanagi, Satoru  en tant que Directeur Artistique</p>
-            <p>Kawada, Ruka  en tant que Musicien</p>
-            <p>Eguchi, Daisuke  en tant que Scénariste</p>
-      </div>
     </div>
-  </div>
-  <footer>
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
-            <div class="pull-right">
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top affix-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span> <span class="icon-bar"></span>
+                        <span class="icon-bar"></span></button> <a class="navbar-brand" href="index.html">Gochuumon wa Usagi Desu ka?</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="histoire.html">histoire</a>
+                        </li>
+                        <li>
+                            <a href="staff.html">staff</a>
+                        </li>
+                        <li>
+                            <a href="characters.html">personnages</a>
+                        </li>
+                        <li>
+                            <a href="episodes.html">épisodes</a>
+                        </li>
+                        <li>
+                            <a href="music.html">musique</a>
+                        </li>
+                        <li>
+                            <a href="galerie.html">galerie</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="containerbody">
+        <div class="row">
+            <div class="pull-md-3 bd-content">
+                <h1>Staff</h1>
+                <hr>
+                <h3>Voix</h3>
+                <hr>
+                <p>Sakura, Ayane en tant que Hoto, Kokoa</p>
+                <p>Minase, Inori en tant que Kafuu, Chino</p>
+                <p>Uchida, Maaya en tant que Kirima, Sharo</p>
+                <p>Taneda, Risa en tant que Tedeza, Rize</p>
+                <p>Sato, Satomi en tant que Ujimatsu, Chiyaz</p>
+                <p>Hayami, Saori en tant que Aoyama, Midori</p>
+                <p>Kayano, Ai en tant que Hoto, Moka</p>
+                <p>Tokui, Sora en tant que Jouga, Maya</p>
+                <p>Hayami, Show en tant que Kafuu, Takahiro</p>
+                <p>Murakawa, Rie en tant que Natsu, Megumi</p>
+                <p>Kiyokawa, Motomu en tant que Tippy</p>
+                <h3>Direction Artistique/Technique</h3>
+                <hr>
+                <p>Hashimoto, Hiroyuki en tant que Directeur</p>
+                <p>Aketagawa, Jin en tant que Directeur Son</p>
+                <p>Hirayanagi, Satoru en tant que Directeur Artistique</p>
+                <p>Kawada, Ruka en tant que Musicien</p>
+                <p>Eguchi, Daisuke en tant que Scénariste</p>
             </div>
         </div>
     </div>
-  </footer>
-  <script src="js/cheet.min.js" type="text/javascript"></script> 
-  <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="js/tether.min.js"></script>
-  <script src="js/bootstrap.min.js"></script> 
-  <script>
-    window.addEventListener("load", function(){
-      var load_screen = document.getElementById("spinner-wrapper");
-      $( ".spinner-wrapper" ).remove();
+    <footer>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="pull-left"> Copyright © <a href="https://github.com/Slytaria/Gochuumon-Unicaen" target="_blank" title="github">Aurélien Thorel</a> 2017. All right reserved. </p>
+                <div class="pull-right">
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="js/cheet.min.js" type="text/javascript"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/tether.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+    window.addEventListener("load", function() {
+        var load_screen = document.getElementById("spinner-wrapper");
+        $(".spinner-wrapper").remove();
     });
-  </script>
+    </script>
 </body>
+
 </html>
